# labo3-h25

./: .gitignore  .vscode-ctags  _config.yml  index.md  notes.txt
01_sourceUnique/: profilage-compositeur-834.txt  profilage-decodeur-830.txt
02_deuxVideos/: profilage-compositeur-861.txt  profilage-decodeur-856.txt  profilage-decodeur-857.txt
03_troisVideos/: profilage-compositeur-888.txt  profilage-decodeur-881.txt  profilage-decodeur-882.txt  profilage-decodeur-883.txt
04_mosaique/: profilage-compositeur-926.txt  profilage-decodeur-910.txt  profilage-decodeur-912.txt  profilage-decodeur-913.txt  profilage-decodeur-914.txt
05_grossevideo/: profilage-compositeur-1059.txt  profilage-decodeur-1048.txt  profilage-redimensionneur-1055.txt
07_deuxVideosGris/: profilage-compositeur-1111.txt  profilage-compositeur-1157.txt  profilage-convertisseur-1152.txt  profilage-convertisseur-1153.txt  profilage-decodeur-1088.txt  profilage-decodeur-1089.txt  profilage-decodeur-1090.txt  profilage-decodeur-1139.txt  profilage-decodeur-1140.txt  profilage-redimensionneur-1103.txt  profilage-redimensionneur-1104.txt  profilage-redimensionneur-1106.txt
08_deuxFiltres/: profilage-compositeur-1230.txt  (+8 more)
src/: CMakeLists.txt  allocateurMemoire.c  allocateurMemoire.h  commMemoirePartagee.c  commMemoirePartagee.h  compositeur.c  convertisseurgris.c  creerProfilageImages.py  decodeur.c  filtreur.c  jpgd.cpp  jpgd.h  redimensionneur.c  schedsupp.h  syncAndStartGDB.sh  utils.c  utils.h  videoConverter.py  videoReader.py
src/configs/: 01_sourceUnique.bash  02_deuxVideos.bash  03_troisVideos.bash  04_mosaique.bash  05_grossevideo.bash  06_troisMediumVideos.bash  06_troisPetiteVideosRedimensionnees.bash  07_deuxVideosGris.bash  07_redimEtGris.bash  08_deuxFiltres.bash  09_realtime4videos.bash  10_realtimeDeuxFiltres.bash  11_deadlineDeuxVideos.bash  11_deadlineTroisVideos.bash
(+24 files in other folders)
